lagt till html och sass

--- a/index.html
+++ b/index.html
@@ -8,8 +8,37 @@
     <script src="./javascript/main.js" defer></script>
 </head>
 <body>
-   <header>
-       <h1>Webbshop</h1>
-   </header> 
+    <header>
+        <div class="header">
+            <div class="header-text">
+                 <h2> Candle store </h2>
+                 <img class="logo" src="/images/candleLogo.jpg" alt="">
+            </div>
+                <a class="topLink">Hem</a>
+                <a class="topLink">Produkter</a>
+                <a class="topLink">Kontakt</a>
+            </div>
+        </div>
+    </header>
+<main>
+    <div class="hero-container">
+        <div class="hero-text">
+        <h1>Julkampanj</h1>
+        <h4>Upp till 30% rabatt</h4>
+    </div>
+    </div>
+<div class="card-container">
+    <div class="startCard left">
+        <div class="card-text">
+            <h4>Handmade candles</h4>
+        </div>
+    </div>
+    <div class="startCard right">
+        <div class="card-text">
+            <h4>Cozy lights</h4>
+        </div>
+    </div>
+</div>
+</main>
 </body>
 </html>
