--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a class="topLink">Hem</a>
                 <a class="topLink">Produkter</a>
                 <a class="topLink">Kontakt</a>
+                <a class="topLink">Admin</a>
             </div>
         </div>
     </header>
