Lagt till footer

--- a/index.html
+++ b/index.html
@@ -21,25 +21,37 @@
             </div>
         </div>
     </header>
-<main>
-    <div class="hero-container">
-        <div class="hero-text">
-        <h1>Julkampanj</h1>
-        <h4>Upp till 30% rabatt</h4>
-    </div>
-    </div>
-<div class="card-container">
-    <div class="startCard left">
-        <div class="card-text">
-            <h4>Handmade candles</h4>
+    <main>
+        <div class="hero-container">
+            <div class="hero-text">
+            <h1>Julkampanj</h1>
+            <h4>Upp till 30% rabatt</h4>
         </div>
-    </div>
-    <div class="startCard right">
-        <div class="card-text">
-            <h4>Cozy lights</h4>
         </div>
-    </div>
-</div>
-</main>
+        <div class="card-container">
+            <div class="startCard left">
+                <div class="card-text">
+                    <h4>Handmade candles</h4>
+                </div>
+            </div>
+            <div class="startCard right">
+                <div class="card-text">
+                    <h4>Cozy lights</h4>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="socialMedia-container">
+                <p>Följ oss på sociala medier:</p>
+                <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./images/instagram_icon.png" alt="instagram"></a>
+                <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./images/facebook_icon_black.png" alt="facebook"></a>
+            </div>
+            <div class="copyright-div">
+                <p class= "copyright-text">&copy; 2021 Grupp 6</p>
+            </div>
+        </div>   
+    </footer>
 </body>
 </html>
