--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <main>
         <div class="hero-container">
             <div class="hero-text">
-            <h1>Julkampanj</h1>
-            <h4>Upp till 30% rabatt</h4>
-        </div>
+                <h1>Julkampanj</h1>
+                <h4>Upp till 30% rabatt</h4>
+            </div>
+            <div class="image-container"></div>
         </div>
         <div class="card-container">
             <div class="startCard left">
