--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./javascript/main.js" defer></script>
+    <script src="./javascript/login.js" defer></script>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -18,8 +19,20 @@
                 <a class="topLink">Hem</a>
                 <a class="topLink">Produkter</a>
                 <a class="topLink">Kontakt</a>
-                <a class="topLink">Admin</a>
+                <a class="topLink" id="login">Admin</a>
             </div>
+
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <h1 id="login-header">Login</h1>
+                    <form id="login-form">
+                        <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+                        <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+                        <input type="submit" value="Login" id="login-form-submit">
+                    </form>
+                </div>
+            </div>
+
         </div>
     </header>
     <main>
