--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/login.js" defer></script>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header>
         <div class="header">
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="/images/candleLogo.jpg" alt="">
+                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink">Hem</a>
                 <a class="topLink">Produkter</a>
@@ -59,8 +59,8 @@
         <div class="footer-container">
             <div class="socialMedia-container">
                 <p>Följ oss på sociala medier:</p>
-                <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./images/instagram_icon.png" alt="instagram"></a>
-                <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./images/facebook_icon_black.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./css/images/instagram_icon.png" alt="instagram"></a>
+                <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./css/images/facebook_icon_black.png" alt="facebook"></a>
             </div>
             <div class="copyright-div">
                 <p class= "copyright-text">&copy; 2021 Grupp 6</p>
