--- a/wishlist.html
+++ b/wishlist.html
@@ -28,7 +28,7 @@
                 <h2> Candle store </h2>
                 <img class="logo" src="./images/candleLogo.jpg" alt="">
            </div>
-                <a class="topLink">Hem</a>
+                <a href="/index.html" class="topLink">Hem</a>
                 <a class="topLink">Produkter</a>
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
@@ -38,26 +38,6 @@
                 </div>
         </div>
     </header>
-<main>
-    <div class="hero-container">
-        <div class="hero-text">
-        <h1>Julkampanj</h1>
-        <h4>Upp till 30% rabatt</h4>
-    </div>
-    </div>
-<div class="card-container">
-    <div class="startCard left">
-        <div class="card-text">
-            <h4>Handmade candles</h4>
-        </div>
-    </div>
-    <div class="startCard right">
-        <div class="card-text">
-            <h4>Cozy lights</h4>
-        </div>
-    </div>
-</div>
 
-</main>
 </body>
 </html>
