--- a/varukorg.html
+++ b/varukorg.html
@@ -28,33 +28,21 @@
                 <h2> Candle store </h2>
                 <img class="logo" src="./images/candleLogo.jpg" alt="">
            </div>
-                <a class="topLink">Hem</a>
+                <a href="/index.html" class="topLink">Hem</a>
                 <a class="topLink">Produkter</a>
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
                 <div class="cart-container">
-                <a href="/wishlist.html"><img class="icons" src="/images/heartIcon.jpg"></a>
+                    <a href="/wishlist.html"><img class="icons" src="/images/heartIcon.jpg"></a>
                 <a href="/varukorg.html"><img class="icons" src="./images/cart.jpg"></a>
                 </div>
         </div>
     </header>
 <main>
-    <div class="hero-container">
-        <div class="hero-text">
-        <h1>Julkampanj</h1>
-        <h4>Upp till 30% rabatt</h4>
-    </div>
-    </div>
-<div class="card-container">
-    <div class="startCard left">
-        <div class="card-text">
-            <h4>Handmade candles</h4>
-        </div>
-    </div>
-    <div class="startCard right">
-        <div class="card-text">
-            <h4>Cozy lights</h4>
-        </div>
+    <div class="cart-flex">
+       <h2>Slutför din beställning</h2>
+        <div class="cart-box">
+            <h2>Din varukorg</h2>
     </div>
 </div>
 
