--- a/varukorg.html
+++ b/varukorg.html
@@ -33,8 +33,8 @@
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
                 <div class="cart-container">
-                    <a href="/wishlist.html"><img class="icons" src="/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./images/cart.jpg"></a>
+                    <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
+                <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
                 </div>
         </div>
     </header>
