--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                     <a href="./productpage.html">Produkter</a>
                     <a href="#kontakt">Kontakt</a>
                 </div>
-               </div>
+            </div>
             <div class="header-text">
                  <h2> Candle store </h2>
                  <img class="logo" src="./images/candleLogo.jpg" alt="">
             </div>
-                <a class="topLink">Hem</a>
-                <a class="topLink">Produkter</a>
+                <a class="topLink" href="./index.html">Hem</a>
+                <a class="topLink" href="./productpage.html">Produkter</a>
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
-                <div class="cart-container">
+            <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
                 <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
-                </div>
+            </div>
         </div>
     </header>
     <main>
