--- a/wishlist.html
+++ b/wishlist.html
@@ -20,22 +20,22 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="#hem">Hem</a>
-                    <a href="#produkter">Produkter</a>
+                    <a href="./productpage.html">Produkter</a>
                     <a href="#kontakt">Kontakt</a>
                 </div>
-               </div>
-               <div class="header-text">
-                <h2> Candle store </h2>
-                <img class="logo" src="./images/candleLogo.jpg" alt="">
-           </div>
-                <a href="/index.html" class="topLink">Hem</a>
-                <a class="topLink">Produkter</a>
+            </div>
+            <div class="header-text">
+                 <h2> Candle store </h2>
+                 <img class="logo" src="./images/candleLogo.jpg" alt="">
+            </div>
+                <a class="topLink" href="./index.html">Hem</a>
+                <a class="topLink" href="./productpage.html">Produkter</a>
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
-                <div class="cart-container">
+            <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
                 <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
-                </div>
+            </div>
         </div>
     </header>
     <main>
