Fixat javascript koppling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
-                <a class="topLink">Kontakt</a>
+                <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
