--- a/productpage.html
+++ b/productpage.html
@@ -38,7 +38,7 @@
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
-                <a class="topLink">Kontakt</a>
+                <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
@@ -282,21 +282,21 @@
                 </div>
             </div>
         </div>
-        <!--Product page slutar-->
-        <!--Footer börjar-->
-        <footer class="footer">
-            <div class="footer-container">
-                <div class="socialMedia-container">
-                    <p>Följ oss på sociala medier:</p>
-                    <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./css/images/instagram_icon.png" alt="instagram"></a>
-                    <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./css/images/facebook_icon_black.png" alt="facebook"></a>
-                </div>
-                <div class="copyright-div">
-                    <p class= "copyright-text">&copy; 2021 Grupp 6</p>
-                </div>
-            </div>   
-        </footer>
-        <!--Footer slutar-->
+        <!--Product page slutar-->   
     </main>
+    <!--Footer börjar-->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="socialMedia-container">
+                <p>Följ oss på sociala medier:</p>
+                <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./css/images/instagram_icon.png" alt="instagram"></a>
+                <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./css/images/facebook_icon_black.png" alt="facebook"></a>
+            </div>
+            <div class="copyright-div">
+                <p class= "copyright-text">&copy; 2021 Grupp 6</p>
+            </div>
+        </div>   
+    </footer>
+    <!--Footer slutar-->
 </body>
 </html>
