--- a/index.html
+++ b/index.html
@@ -19,23 +19,18 @@
                     <div class="link"></div>
                     <div class="link"></div>
                 </button>
-                <div class="dropdown-content">
-                    <a href="#hem">Hem</a>
-                    <a href="./productpage.html">Produkter</a>
-                    <a href="#kontakt">Kontakt</a>
-                </div>
                </div>
                <div class="header-text">
                 <h2> Candle store </h2>
                 <img class="logo" src="./images/candleLogo.jpg" alt="">
            </div>
                 <a class="topLink">Hem</a>
-                <a class="topLink">Produkter</a>
+                <a href="./productpage.html" class="topLink">Produkter</a>
                 <a class="topLink">Kontakt</a>
                 <a class="topLink">Admin</a>
                 <div class="cart-container">
-                <a href="/wishlist.html"><img class="icons" src="/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./images/cart.jpg"></a>
+                <a href="./wishlist.html"><img class="icons" src="./images/heartIcon.jpg"></a>
+                <a href="./varukorg.html"><img class="icons" src="./images/cart.jpg"></a>
                 </div>
         </div>
     </header>
@@ -71,12 +66,5 @@
             </div>
         </div>   
     </footer>
-<<<<<<< HEAD
-=======
-    </div>
-</div>
-
-</main>
->>>>>>> b6a31cb8b3bc1b1460a792aceff570503480a5c9
 </body>
 </html>
