Ändrat cart-text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             </div>
             <div class="startCard right">
                 <div class="card-text">
-                    <h4>Cozy lights</h4>
+                    <h4>Produktnyheter!</h4>
+                    <p>våren 2022</p>
                 </div>
             </div>
         </div>
