--- a/productpage.html
+++ b/productpage.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <!---------JS--------->
     <script src="./javascript/main.js" defer></script>
+    <script src="./javascript/wishlist.js" defer></script>
     <!---------CSS--------->
     <link rel="stylesheet" href="./css/main.css">
     <!---------FontAwesome--------->
