--- a/productpage.html
+++ b/productpage.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Candle store - Alla Produkter </title>
     <!---------JS--------->
     <script src="./javascript/main.js" defer></script>
+    <script src="./javascript/localStorageToProductPage.js" defer></script>
     <!---------CSS--------->
     <link rel="stylesheet" href="./css/main.css">
     <!---------FontAwesome--------->
@@ -79,206 +80,8 @@
                         </div>
                     </div>
                     <!--Slut på en produkt-->
-                    <!--Produkt 2-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/pyramid.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Pyramid</a>
-                            <p class="product-price">119 sek</p>
-                            <p class="product-price">89 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 2-->
-                    <!--Produkt 3-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/bubbla.jpeg" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Bubbla</a>
-                            <p class="product-price">119 sek</p>
-                            <p class="product-price">89 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 3-->
-                    <!--Produkt 4-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/bubblamini.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Bubbla mini</a>
-                            <p class="product-price">59 sek</p>
-                            <p class="product-price">45 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 4-->
-                    <!--Produkt 5-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/snackastor.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Snäcka stor</a>
-                            <p class="product-price">119 sek</p>
-                            <p class="product-price">89 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 5-->
-                    <!--Produkt 6-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/snackamini.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Snäcka mini</a>
-                            <p class="product-price">59 sek</p>
-                            <p class="product-price">45 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 6-->
-                    <!--Produkt 7-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/gran.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Julgran</a>
-                            <p class="product-price">79 sek</p>
-                            <p class="product-price">59 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 7-->
-                    <!--Produkt 8-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/kotte.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Kotte</a>
-                            <p class="product-price">79 sek</p>
-                            <p class="product-price">59 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 8-->
-                    <!--Produkt 9-->
-                    <div class="product">
-                        <div class="product-content">
-                            <div class="product-img">
-                                <img src="./images/trepack.JPG" alt="Produktbild">
-                            </div>
-                            <div class="produkt-btns">
-                                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                                <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                                <button type="button" class="btn-buy">Köp nu</button>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <div class="product-info-top">
-                                <h2 class="sm-title">Ljus</h2>
-                            </div>
-                            <a href="#" class="product-name">Trepack</a>
-                            <p class="product-price">179 sek</p>
-                            <p class="product-price">135 sek</p>
-                        </div>
-                        <div class="off-info">
-                            <h2 class="sm-title">25% rabatt</h2>
-                        </div>
-                    </div>
-                    <!--Slut produkt 9-->
+                    <!--Produkt genom localStorage-->
+
                 </div>
             </div>
         </div>
