--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
-</head>
+    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 <body>
     <header>
         <div class="header">
@@ -34,8 +41,8 @@
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink" href="" id="login">Admin</a>
             <div class="cart-container">
-                <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
+                <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
+                <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
             </div>
         </div>
         <div id="myModal" class="modal">
@@ -53,20 +60,17 @@
         <div class="hero-container">
             <div class="hero-text">
                 <h1>Julkampanj</h1>
-                <h4>Upp till 30% rabatt</h4>
+                <h4>25% rabatt på alla produkter</h4>
             </div>
-            <div class="image-container"></div>
+            <div class="image-container"></div> 
         </div>
         <div class="card-container">
             <div class="startCard left">
-                <div class="card-text">
-                    <h4>Handmade candles</h4>
-                </div>
             </div>
             <div class="startCard right">
                 <div class="card-text">
-                    <h4>Produktnyheter!</h4>
-                    <p>våren 2022</p>
+                    <h4>Nyheter inför våren 2022</h4>
+                    <p>Pastellfärger</p>
                 </div>
             </div>
         </div>
