--- a/productpage.html
+++ b/productpage.html
@@ -23,12 +23,8 @@
       crossorigin="anonymous"
     ></script>
     <!---------Google Fonts--------->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600&family=Roboto:ital,wght@0,400;0,500;1,500;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <!--Header börjar-->
@@ -47,16 +43,12 @@
         </div>
         <a href="./index.html" class="topLink">Hem</a>
         <a href="./productpage.html" class="topLink">Produkter</a>
-        <a class="topLink">Kontakt</a>
+        <a href="./contactpage.html" class="topLink">Kontakt</a>
         <a id="login" class="topLink">Admin</a>
         <div class="cart-container">
-          <a href="./wishlist.html"
-            ><img class="icons" src="./images/heartIcon.jpg"
-          /></a>
-          <a href="./varukorg.html"
-            ><img class="icons" src="./images/cart.jpg"
-          /></a>
-        </div>
+          <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
+          <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+      </div>
       </div>
     </header>
     <!--Header slut-->
