--- a/productpage.html
+++ b/productpage.html
@@ -43,7 +43,7 @@
                 <a class="topLink">Admin</a>
             <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
+               <div class="test"><a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a></div> 
             </div>
         </div>
     </header>
@@ -58,7 +58,7 @@
                     <!--En produkt-->
                     <div class="product">
                         <div class="product-content">
-                            <div class="product-img">
+                            <div class="product-img"  id="id">
                                 <img src="./images/knut.JPG" alt="Produktbild">
                             </div>
                             <div class="produkt-btns">
