--- a/varukorg.html
+++ b/varukorg.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
+    <script src="./javascript/main.js" defer></script>
+    <script src="./javascript/varukorgItem.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -43,6 +44,8 @@
         <h2>Slutför din beställning</h2>
             <div class="cart-box">
                 <h2>Din varukorg</h2>
+                <div class="productItems"></div>
+                   
             </div>
         </div>
     </main>
