--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./images/candleLogo.jpg" alt="">
+                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
