--- a/productpage.html
+++ b/productpage.html
@@ -40,7 +40,7 @@
         </div>
         <div class="header-text">
           <h2>Candle store</h2>
-          <img class="logo" src="./images/candleLogo.jpg" alt="" />
+          <img class="logo" src="./css/images/candleLogo.jpg" alt="" />
         </div>
         <a href="./index.html" class="topLink">Hem</a>
         <a href="./productpage.html" class="topLink">Produkter</a>
@@ -66,7 +66,7 @@
             <div class="product">
               <div class="product-content">
                 <div class="product-img">
-                  <img src="./images/knut.JPG" alt="Produktbild" />
+                  <img src="./css/images/knut.JPG" alt="Produktbild" />
                 </div>
                 <input type="hidden" id="1">
                 <button type="button" class="btn-wish">
