Ändrat i kod till array med produkter i localStorage

--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,10 @@
     <main>
         <form action="" class="adminForm">
             <h2>Fyll i uppgifter och bild om föremålet:</h2>
-    
+            <div>
+                <label class="adminForm-label" for="objName">Produktens Id: </label>
+                <input type="number" class="adminForm-input" name="" id="objId" placeholder="Vad vill du lägga till?" required>
+            </div>
             <div>
                 <label class="adminForm-label" for="objName">Produktens Namn: </label>
                 <input type="text" class="adminForm-input" name="" id="objName" placeholder="Vad vill du lägga till?" required>
