--- a/productpage.html
+++ b/productpage.html
@@ -69,7 +69,7 @@
                   <img src="./css/images/knut.JPG" alt="Produktbild" />
                 </div>
                 <input type="hidden" id="1">
-                <button type="button" class="btn-wish">
+                <button type="button">
                   <i class="fa fa-heart-o" aria-hidden="true"></i>
                 </button>
                 <div class="product-btns">
