--- a/productpage.html
+++ b/productpage.html
@@ -48,7 +48,11 @@
         <a id="login" class="topLink">Admin</a>
         <div class="cart-container">
           <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
-          <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <div class="cart">
+            <a href="./varukorg.html" class="action-buttons">
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>0</span>
+            </a>
+          </div>
       </div>
       </div>
     </header>
@@ -63,7 +67,7 @@
           </p>
           <div class="product-items">
             <!--En produkt-->
-            <div class="product">
+            <!--<div class="product">
               <div class="product-content">
                 <div class="product-img">
                   <img src="./css/images/knut.JPG" alt="Produktbild" />
@@ -87,7 +91,7 @@
               <div class="off-info">
                 <h2 class="sm-title">25% rabatt</h2>
               </div>
-            </div>
+            </div>-->
             <!--Slut på en produkt-->
 
             <!--Produkt genom localStorage-->
