ändrat knapp till wish-list

--- a/productpage.html
+++ b/productpage.html
@@ -47,12 +47,13 @@
         <a href="./contactpage.html" class="topLink">Kontakt</a>
         <a id="login" class="topLink">Admin</a>
         <div class="cart-container">
-          <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
+
           <div class="cart">
-            <a href="./varukorg.html" class="action-buttons">
-              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>0</span>
+            <a href="./wishlist.html" class="action-buttons">
+              <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
             </a>
           </div>
+          <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </div>
       </div>
     </header>
@@ -67,7 +68,8 @@
           </p>
           <div class="product-items">
             <!--En produkt-->
-            <!--<div class="product">
+            <!--
+            <div class="product">
               <div class="product-content">
                 <div class="product-img">
                   <img src="./css/images/knut.JPG" alt="Produktbild" />
@@ -91,7 +93,8 @@
               <div class="off-info">
                 <h2 class="sm-title">25% rabatt</h2>
               </div>
-            </div>-->
+            </div>
+            -->
             <!--Slut på en produkt-->
 
             <!--Produkt genom localStorage-->
